openshift/overlays/development/frontend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-dashboard
spec:
  host: dashboard-dev.yourdomain.com
